--- a/媒體/game.html
+++ b/媒體/game.html
@@ -33,8 +33,27 @@
         <a>登出</a>
     </header>
 
+    <div class="pet_mian">
+        <form action="form_action.asp" method="get">
+            <br>
+            活動名稱: <input type="text" name="fname" />
+            <br>
+            類型:<input type="text" name="lname" />
+            <br>
+            地址:<input type="text" name="lname" />
+            <br>
+            時間:<input type="text" name="lname" />
+            <br>
+        <a href="index.html" type="button" value="Submit" />Submit</a>
+        
+        
+</form>
+    </div>
+    <br>
+    <div class="pet_mian" id="map">
+        </div>
     <div data-am-widget="gotop" class="am-gotop am-gotop-fixed am-no-layout">
-        <a href="http://demo.cssmoban.com/cssthemes4/amz_17_bef/index.html#top" title="">
+        <a href="game.html#top" title="">
         <img class="am-gotop-icon-custom" src="./首页_files/goTop.png">
     </a>
     </div>
