--- a/網頁/index.html
+++ b/網頁/index.html
@@ -29,7 +29,7 @@
 				<h1><a href="index.html">ParkingCha</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href=".html">Finding Spot</a></li>
+						<li><a href="map.html">Finding Spot</a></li>
 						<li><a href=".html">Recent Search</a></li>
 						<li><a href=".html">My Rates</a></li>
 						<li><a href=".html">Account Setting</a></li>
@@ -46,8 +46,8 @@
 
 				<p>找尋車位不再是件困難事</p>
 				<ul class="actions">
-					<li>
-						<a href="#" class="button special">即刻加入</a>
+					<li><button class="button special" onclick="document.getElementById('id01').style.display='block'">即刻加入</button>
+						
 					</li>
 				</ul>
 			</section>
@@ -177,8 +177,8 @@
 
   <!-- Modal Content -->
   <form class="modal-content animate" action="/action_page.php">
-    <div class="imgcontainer">
-      <img src="images/parkingcha_bl.png" height="20%" width="40%">
+    <div class="imgcontainer" style="position:relative;top:50px;left:25%">
+      <img src="images/parkingcha_bl.png" height="30%" width="50%">
      </div>
 <br /> 
      <br /> 
@@ -196,7 +196,6 @@
      <button class="button special" onclick="document.getElementById('id02').style.display='block',document.getElementById('id01').style.display='none'" >Sign Up</button>
     </div>
 <br /> 
-
     <div class="container" >
       <button type="button" class="button special" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
       <br /> 
@@ -208,8 +207,8 @@
 <div id="id02" class="modal">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
   <form class="modal-content animate" action="/action_page.php">
-   <div class="imgcontainer">
-      <img src="images/parkingcha_bl.png" height="20%" width="40%">
+   <div class="imgcontainer" style="position:relative;top:50px;left:25%">
+      <img src="images/parkingcha_bl.png" height="30%" width="50%">
      </div>
     <div class="container">
      <br /> 
