手機版bug修正
修正手機版側邊欄點擊login後側邊欄並未消失的bug

--- a/網頁/index.html
+++ b/網頁/index.html
@@ -34,7 +34,7 @@
 						<li><a href=".html">My Rates</a></li>
 						<li><a href=".html">Account Setting</a></li>
 						<li><a href=".html">Help</a></li>
-						<li><button class="button special" onclick="document.getElementById('id01').style.display='block'">Login</button></li>
+						<li><button class="button special" onclick="document.getElementById('id01').style.display='block',document.getElementById('navPanel').style.display='none'">Login</button></li>
 					</ul>
 				</nav>
 			</header>
