--- a/網頁/index.html
+++ b/網頁/index.html
@@ -90,7 +90,7 @@
 								<p></p>
 							</section>
                             <section class="3u$ 6u$(medium) 12u$(xsmall) profile">
-								<img src="" alt="" />
+								<img src="images/profile/李其祐.jpg" height="90px" width="90px" alt="" />
 								<h4>李其祐</h4>
 								<p></p>
 							</section>
