--- a/網頁/index.html
+++ b/網頁/index.html
@@ -181,8 +181,7 @@
       <img src="images/parkingcha_bl.png" height="30%" width="50%">
      </div>
 <br /> 
-     <br /> 
-     <br />  
+   
     <div class="container">
       <label><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required>
@@ -192,10 +191,15 @@
       <input type="password" placeholder="Enter Password" name="psw" required>
 <br /> 
       <button class="button special" type="submit">Login</button>
+    <div class="container" style="position:relative;left:15%">
+				<a class="icon rounded fa-facebook"><span class="label">Facebook</span></a>
+								
+				<a class="icon rounded fa-google-plus"><span class="label">Google+</span></a>
+	</div>
 
      <button class="button special" onclick="document.getElementById('id02').style.display='block',document.getElementById('id01').style.display='none'" >Sign Up</button>
     </div>
-<br /> 
+    
     <div class="container" >
       <button type="button" class="button special" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
       <br /> 
