GitHub correct &icon update

--- a/網頁/index.html
+++ b/網頁/index.html
@@ -101,7 +101,7 @@
 						<p>歡迎查閱我們的github<br>所有關於我們開發的程式碼都在上面</p>
 						<ul class="actions">
 							<li>
-								<a href="https://github.com/NCCU-Software-Engineering/Software-Engineering" target="_blank" class="button special">Github</a>
+								<a href=https://github.com/tsaihanlung841203/SNA_InitiateTeam target="_blank" class="button special">Github</a>
 							</li>
 						</ul>
 					</footer>
@@ -191,11 +191,10 @@
       <input type="password" placeholder="Enter Password" name="psw" required>
 <br /> 
       <button class="button special" type="submit">Login</button>
-    <div class="container" style="position:relative;left:15%">
-				<a class="icon rounded fa-facebook"><span class="label">Facebook</span></a>
+     
+				<a class="icon rounded fa-facebook" ><span class="label">Facebook</span></a>
 								
-				<a class="icon rounded fa-google-plus"><span class="label">Google+</span></a>
-	</div>
+				<a class="icon rounded fa-google-plus" ><span class="label">Google+</span></a>
 
      <button class="button special" onclick="document.getElementById('id02').style.display='block',document.getElementById('id01').style.display='none'" >Sign Up</button>
     </div>
