整合地圖失敗

--- a/網頁/index.html
+++ b/網頁/index.html
@@ -29,7 +29,7 @@
 				<h1><a href="index.html">ParkingCha</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="map.html">Finding Spot</a></li>
+						<li><a href="mapp.html">Finding Spot</a></li>
 						<li><a href=".html">Recent Search</a></li>
 						<li><a href=".html">My Rates</a></li>
 						<li><a href=".html">Account Setting</a></li>
@@ -101,7 +101,7 @@
 						<p>歡迎查閱我們的github<br>所有關於我們開發的程式碼都在上面</p>
 						<ul class="actions">
 							<li>
-								<a href=https://github.com/tsaihanlung841203/SNA_InitiateTeam target="_blank" class="button special">Github</a>
+								<a href="https://github.com/tsaihanlung841203/SNA_InitiateTeam" target="_blank" class="button special">Github</a>
 							</li>
 						</ul>
 					</footer>
@@ -192,7 +192,7 @@
 <br /> 
       <button class="button special" type="submit">Login</button>
      
-				<a class="icon rounded fa-facebook" ><span class="label">Facebook</span></a>
+				<a class="icon rounded fa-facebook"> <span class="label">Facebook</span></a>
 								
 				<a class="icon rounded fa-google-plus" ><span class="label">Google+</span></a>
 
