Map出來啦啦啦

--- a/網頁/mapp.html
+++ b/網頁/mapp.html
@@ -32,11 +32,11 @@ html,
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
-		<noscript>
+		
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
-		</noscript>
+		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   
 		
@@ -59,9 +59,10 @@ html,
 			</header>
 
 		<!-- Main -->
-			<section id="main" class="wrapper">
+		
 				
-                <div id="map"></div>
+                <div id="map" class="map"></div>
+
 				<script>
         var map;
         function initMap() {
@@ -240,7 +241,7 @@ html,
 </div>
 
 				
-			</section>
+			
 
 		<footer id="footer">
 				<div class="container">
