--- a/sna_checkpoint2_5.25/mapp.html
+++ b/sna_checkpoint2_5.25/mapp.html
@@ -81,6 +81,7 @@
             <label class="control-label" style="color:black">上傳圖片</label>
             <input type="file" id="file" class="file" accept="image/*"><br>
             <input type="hidden" id="lat" class="form-control" ><input type="hidden" id="lng" class="form-control" >
+            <input type="hidden" id="img" class="form-control" >
             <button class="btn btn-success" id="add_private">送出</button><br>
         </form>
     </div>
