--- a/sna_checkpoint2_5.25/mapp.html
+++ b/sna_checkpoint2_5.25/mapp.html
@@ -66,7 +66,7 @@
     </header>
 
     <!-- Main -->
-    <div class="overlay" style="background-color:white; text-align:center; position:absolute; z-index:10000; opacity:0.8;">
+    <div class="overlay" style="background-color:white; text-align:center; position:absolute; z-index:10000;">
         <ul class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#private">個人租車</a></li>
             <li><a data-toggle="tab" href="#temp">臨時停車</a></li>
