--- a/sna_checkpoint2_5.25/mapp.html
+++ b/sna_checkpoint2_5.25/mapp.html
@@ -26,12 +26,12 @@
     <script src="js/skel-layers.min.js"></script>
     <script src="js/init.js"></script>
 
+    <link rel="stylesheet" href="css/rating.min.css" />
     <link rel="stylesheet" href="css/skel.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style-xlarge.css" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
@@ -130,6 +130,7 @@
     <div id="map"></div>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5G5vAGGIoyo8p_uicFG2Kkckq-oXFq-k&callback=initMap"></script>
+    <script src="js/rating.min.js"></script>
     <script src="connectdb.js"></script>
     <script src="map.js"></script>
 
