--- a/sna_checkpoint2_5.25/mapp.html
+++ b/sna_checkpoint2_5.25/mapp.html
@@ -64,6 +64,7 @@
                 <li><a href="mapp.html">Finding Spot</a></li>
                 <li><a id="loginbutton" href="login.html"></a></li>
                 <li id="logoutbutton" type="button" onclick="Logoutfun()"></li>
+                <li><a href="index.html">Back home</a></li>
             </ul>
         </nav>
     </header>
